Manipuladores para adicionar e verificar registro dos usuários

--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "dayjs": "^1.8.36",
+    "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.7"
