CORS na API habilitado

--- a/api/package.json
+++ b/api/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "cors": "^2.8.5",
     "dayjs": "^1.8.36",
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
